Fix misaligned text

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -8,7 +8,6 @@ body, html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  vertical-align: middle;
 }
 
 h1 {
